Chrome image overflow - fix

--- a/style.scss
+++ b/style.scss
@@ -148,6 +148,7 @@ h1 {
     img {
         flex: 0 0 50%;
         width: 100%;
+        overflow: hidden;
     }
 }
 
@@ -333,7 +334,6 @@ footer {
     }
 }
 
-// Medium screen
 @media only screen and (max-width: 1200px) {
     .box div {
         padding: 60px;
@@ -345,7 +345,7 @@ footer {
     }
 }
 
-@media only screen and (max-width: 900px) and (min-width: 720px){
+@media only screen and (max-width: 900px) and (min-width: 820px){
     .box-two article div {
         h3 {
             font-size: 30px;
@@ -358,7 +358,7 @@ footer {
 }
 
 // Small screen
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 820px) {
     .header-img {
         background-image: url("images/mobile/image-header.jpg");
     }
